# Claude.Moodle-MCP-Server

./: .backup_tracking  .bandit  .dockerignore  .env.example  .gitattributes  .gitignore  .last_dev_backup  .pre-commit-config.yaml  .replit  BACKUP_STRATEGIES_GUIDE.md  BACKUP_SYSTEM_UPDATE.md  BUGFIX_DOCUMENTATION.md  CI_FIX.md  CLAUDE_CODE_COMMIT_MESSAGE.txt  CLAUDE_CODE_SUMMARY.md  CLAUDE_DESKTOP_SETUP.md  COMPLETE_SETUP_GUIDE.md  CONFIG_CLEANUP_SUMMARY.md  ENHANCED_REBUILD_SUCCESS.md  IMPORT_ERROR_SOLUTION.md  Makefile  README.md  README_CONFIG_MANAGEMENT.md  TESTING_GUIDE.md  __init__.py  backup_strategies.sh  commit_claude_code.sh  config.py  constants.py  content_formatter.py  content_parser.py  demo.py  docker-compose.minimal.yml  docker-compose.new.yml  docker-compose.optimized.yml  docker-compose.simple.yml  docker-compose.yml  e2e_test_report.html  enable_webservices.py  enhanced_moodle_claude.py  (+32 more)
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
backups/: default_setup_latest
config/: adaptive_config.py  adaptive_settings.json  claude_desktop_config_advanced.json  claude_desktop_config_basic.json  claude_desktop_config_simple_test.json  claude_desktop_optimized.json  claude_desktop_working.json  dual_token_config.py  master_config.json  master_config.py  moodle_manual_setup.md  moodle_tokens_fresh.env
data/: sessions.db
debug/: check_token_user.py  debug_content_parser.py  mcp_server_debug.py  test_enrollment_fix.py  validate_mcp_integration.py
demos/: README.md  advanced_transfer.py  check_webservices.py  (+6 more)
(+284 files in other folders)
